Eliminar videoResponse