@@ -1,5 +1,6 @@
 package aiss.peertubeMiner.service;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -8,7 +9,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import aiss.peertubeMiner.model.peertubeModels.Video.Video;
-import aiss.peertubeMiner.model.peertubeModels.Video.videoResponse;
 import aiss.peertubeMiner.model.videominerModels.VMVideo;
 import aiss.peertubeMiner.transformer.Transformer;
 
@@ -33,12 +33,8 @@ public class VideoService {
 
 //GET all
     public List<Video> findAllVideos() {
-         videoResponse response = restTemplate.getForObject(baseUri + "/videos", videoResponse.class);
-
-        if (response == null || response.getData() == null) {
-            return List.of();
-        }
-        return response.getData();
+        Video[] response = restTemplate.getForObject(baseUri + "/videos", Video[].class);
+        return Arrays.asList(response);
     }
 //POST
     public VMVideo createVideoInVideoMiner(Video data){
